improve code, improve tests

--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -240,7 +240,7 @@ samp {
    ========================================================================== */
 
 /**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
+ * Known Limitation: by default, Chrome and Safari on OS X allow very Limited
  * styling of `select`, unless a `border` property is set.
  */
 
