--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -240,7 +240,7 @@ samp {
    ========================================================================== */
 
 /**
- * Known Limitation: by default, Chrome and Safari on OS X allow very Limited
+ * Known Limitation: by default, Chrome and Safari on OS X allow very limited
  * styling of `select`, unless a `border` property is set.
  */
 
